# szakdolgozat

./: pyproject.toml  winner_test_0.6628.ipynb
Webscrape/: brand_list_to_filesystem.py  pinterest_logos.py
ocr/: brands_list.py  keras-ocr.ipynb
