[project]
name = "progress-til-beadas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bayesian-optimization>=2.0.4",
    "groq>=0.24.0",
    "jupyter>=1.1.1",
    "keras-ocr>=0.9.3",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchmetrics>=1.7.1",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "tensorflow>=2.15",
]
